# laser_setup

./: .flake8  .gitignore  IVg.py  IVsd.py  It.py  README.md  __main__.py  __main__.spec  config.ini  default_config.ini  example.py  find_devices.py  music.py  pg.py  pyproject.toml  ramp_test.py  requirements.txt  test.py
.github/spec/: build.spec
.github/workflows/: main.yaml
Scripts/: IV.py  IVg.py  It.py  ItVg.py  Iwl.py  MainSequence.py  Pt.py  Pwl.py  Tt.py  __init__.py  calibrate_laser.py  console.py  find_calibration_voltage.py  find_dp_script.py  get_updates.py  setup_adapters.py  test.ipynb  utils.py
config/: parameters.yml
docs/: Short protocol.md  led_calibration.md  led_protocol.md
laser_setup/: __init__.py  __main__.py  default_config.ini  default_config.yml  display.py  instruments.py  parameters.py  parameters.yml  parser.py  patches.py  procedures.py  utils.py
laser_setup/assets/: new_config.yaml
laser_setup/assets/templates/: Qt.yaml  config.yaml  instruments.yaml  parameters.yaml  procedures.yaml  sequences.yaml
laser_setup/cli/: __init__.py  console.py  find_calibration_voltage.py  find_dp_script.py  get_updates.py  init_config.py  parameters_to_db.py  setup_adapters.py
laser_setup/config/: Qt.py  __init__.py  config.py  default_config.yaml  default_config.yml  defaults.py  handler.py  log.py  main.py  parameters.py  parser.py  procedures.yaml  utils.py
laser_setup/display/: Qt.py  __init__.py  app.py  camera_widget.py  experiment_window.py  main_window.py  widgets.py
laser_setup/display/widgets/: __init__.py  camera_widget.py  config_widget.py  inputs_widget.py  log_widget.py  sqlite_widget.py  text_widget.py
laser_setup/display/windows/: __init__.py  experiment_window.py  main_window.py  sequence_window.py
laser_setup/instruments/: __init__.py  bentham.py  instrument_manager.py  keithley.py  manager.py  serial.py  setup.py  tenma.py
laser_setup/procedures/: BaseProcedure.py  ChipProcedure.py  FakeProcedure.py  ITt.py  IV.py  IVT.py  IVg.py  IVgT.py  It copy.py  It.py  ItVg.py  ItWl.py  Iwl.py  LaserCalibration.py  Pt.py  Pwl.py  Sequence.py  Stress.py  Tt.py  VVg.py  VVgCooldown.py  Vt.py  Wait.py  __init__.py  test_connection.py  utils.py
lib/: __init__.py  devices.py  display.py  fits.py  icmm.py  instruments.py  plots.py  procedures.py  utils.py
notebooks/: filter_data.ipynb
protocols/: led_measurement.md
src/: IVg.py
src/laser_setup/: __main__.py
src/lib/: __init__.py  devices.py  utils.py
src/tests/: device_test.py  music_test.py  pymeasure_test.py  ramp_test.py
tests/: device_test.py  gui_test.py  keithley_time_test.py  music_test.py  pymeasure_test.py  ramp_test.py  telegram_test.py  test_connection.py
