[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "laser_setup"
description = "Experimental setup for Laser, I-V and Transfer Curve measurements"
requires-python = ">=3.10"
dependencies = [
    'bendev==0.3.1',
    'GitPython',
    'hydra-core>=1.3.0',
    'matplotlib',
    'pymeasure>=0.15.0,<0.16',
    'PyQt6>=6.1.0',
    'PyYAML',
    'qtpy',
    'Requests',
    'scipy',
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Benjamín Briceño", email = "benjamin.briceno.bb@gmail.com"},
    # Add the others
]
license = {text = "MIT License"}

[project.scripts]
laser_setup = "laser_setup.__main__:main"

[project.gui-scripts]
laser_setup_gui = "laser_setup.__main__:main"

[tool.setuptools.packages.find]
include = ["laser_setup*"]

[tool.setuptools.package-data]
laser_setup = ["config/*.yaml", "assets/**"]

[tool.setuptools.dynamic]
version = {attr = "laser_setup.__version__"}

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "pymeasure[tests]>=0.14.0,<0.16",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = true
PYSIDE6 = false
